@@ -1,6 +1,9 @@
 package com.contenerizacion.Libros_Docker.controller;
 
-import static org.mockito.ArgumentMatchers.any;
+/*import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
@@ -9,95 +12,161 @@ import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.RequestBuilder;
 
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.hamcrest.Matchers.hasSize;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 
 import com.contenerizacion.Libros_Docker.model.Libro;
 import com.contenerizacion.Libros_Docker.service.LibroService;
 
 @SpringBootTest
-@AutoConfigureMockMvc
-public class LibroControllerIntegrationTest {
+class LibroControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
     @MockBean
-    private LibroService libroService;  // Mockeamos el servicio para evitar interacción real con la base de datos
+    private LibroService libroService;
 
     @Test
-    public void testListarLibros() throws Exception {
-        // Crear libros de ejemplo con valores para cada campo
-        List<Libro> librosMock = Arrays.asList(
-            new Libro("El Quijote", "Miguel de Cervantes", "978-3-16-148410-0", 1605),
-            new Libro("Cien años de soledad", "Gabriel García Márquez", "978-0-06-088328-7", 1967)
-        );
-        
-        // Simular la respuesta del servicio
-        when(libroService.listarLibros()).thenReturn(librosMock);
-    
-        // Realizar la solicitud GET al endpoint
+    void listarLibros() throws Exception {
+        Libro libro = new Libro("", "", "", 123);
+        when(libroService.listarLibros()).thenReturn(List.of(libro));
+
         mockMvc.perform(get("/api/libros"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(2))) // Verifica que hay dos libros
-                .andExpect(jsonPath("$[0].titulo").value("El Quijote"))
-                .andExpect(jsonPath("$[0].autor").value("Miguel de Cervantes"))
-                .andExpect(jsonPath("$[0].isbn").value("978-3-16-148410-0"))
-                .andExpect(jsonPath("$[0].anioPublicacion").value(1605))
-                .andExpect(jsonPath("$[1].titulo").value("Cien años de soledad"))
-                .andExpect(jsonPath("$[1].autor").value("Gabriel García Márquez"))
-                .andExpect(jsonPath("$[1].isbn").value("978-0-06-088328-7"))
-                .andExpect(jsonPath("$[1].anioPublicacion").value(1967));
-    }
-    
-
-    @Test
-    public void testObtenerLibro() throws Exception {
-        Long libroId = 1L;
-    
-        // Crear un libro mock con todos los campos
-        Libro libroMock = new Libro("El Alquimista", "Paulo Coelho", "978-0-06-112241-5", 1988);
-    
-        // Simulación de la respuesta del servicio
-        when(libroService.obtenerLibroPorId(libroId)).thenReturn(libroMock);
-    
-        // Realizamos la solicitud GET al endpoint
-        mockMvc.perform(get("/api/libros/{id}", libroId))
-                .andExpect(status().isOk())  // Asegúrate de que el estado sea 200 (OK)
-                .andExpect(jsonPath("$.titulo").value("El Alquimista"))  // Validar el campo 'titulo'
-                .andExpect(jsonPath("$.autor").value("Paulo Coelho"))  // Validar el campo 'autor'
-                .andExpect(jsonPath("$.isbn").value("978-0-06-112241-5"))  // Validar el campo 'isbn'
-                .andExpect(jsonPath("$.anioPublicacion").value(1988));  // Validar el campo 'anioPublicacion'
+                .andExpect(jsonPath("$[0].titulo").value("1984"));
     }
 
     @Test
-    public void testGuardarLibro() throws Exception {
-        // Crear un libro con datos para los campos
-        Libro libroMock = new Libro("El Alquimista", "Paulo Coelho", "978-0-06-112241-5", 1988);
-    
-        // Simulación de la respuesta del servicio
-        when(libroService.guardarLibro(any(Libro.class))).thenReturn(libroMock);
-    
-        // Realizar la solicitud POST al endpoint
+    void guardarLibro() throws Exception {
+        Libro libro = new Libro("1984", "Orwell", "Planeta", 1949);
+        when(libroService.guardarLibro(any(Libro.class))).thenReturn(libro);
+
         mockMvc.perform(post("/api/libros")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content("{\"titulo\":\"El Alquimista\",\"autor\":\"Paulo Coelho\",\"isbn\":\"978-0-06-112241-5\",\"anioPublicacion\":1988}"))
+                .content("{\"titulo\":\"1984\",\"autor\":\"Orwell\",\"Isbn\":\"123456\",\"anioPublicacion\":1949}"))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.titulo").value("El Alquimista"))
-                .andExpect(jsonPath("$.autor").value("Paulo Coelho"))
-                .andExpect(jsonPath("$.isbn").value("978-0-06-112241-5"))
-                .andExpect(jsonPath("$.anioPublicacion").value(1988));
+                .andExpect(jsonPath("$.titulo").value("1984"));
     }
-    
+}*/
 
-    // Agregar más pruebas para PUT y DELETE si lo deseas
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.*;
+import org.springframework.http.MediaType;
+import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+
+import java.util.List;
+
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+
+import com.contenerizacion.Libros_Docker.model.Libro;
+import com.contenerizacion.Libros_Docker.service.LibroImplementation;
+import com.contenerizacion.Libros_Docker.service.LibroService;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+public class LibroControllerIntegrationTest{
+
+    private MockMvc mockMvc;
+
+    @Mock
+    private LibroImplementation libroService;
+
+    @InjectMocks
+    private LibroController libroController;
+
+    private ObjectMapper objectMapper = new ObjectMapper();
+
+    @BeforeEach
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
+        mockMvc = MockMvcBuilders.standaloneSetup(libroController).build();
+    }
+
+    @Test
+    void testGetAllBooks() throws Exception {
+        Libro libro = new Libro();
+        libro.setId(1L);
+        libro.setTitulo("Cien años de soledad");
+        libro.setAutor("Gabriel Garcia");
+        libro.setIsbn("456789");
+        libro.setAnioPublicacion(2000);
+
+        when(libroService.listarLibros()).thenReturn(List.of(libro));
+
+        mockMvc.perform(get("/api/libros/"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].titulo").value("Cien años de soledad"));
+    }
+
+    @Test
+    void testGetBookById() throws Exception {
+        Libro libro = new Libro();
+        libro.setId(2L);
+        libro.setTitulo("El principito");
+        libro.setAutor("Marco Aurelio");
+        libro.setIsbn("123456");
+        libro.setAnioPublicacion(2002);
+
+        when(libroService.obtenerLibroPorId(2L)).thenReturn(libro);
+
+        mockMvc.perform(get("/api/libros/2"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.titulo").value("El principito"));
+    }
+
+    @Test
+    void testCreateBook() throws Exception {
+        Libro libro = new Libro("1984", "Orwell", "Planeta", 1949);
+        when(libroService.guardarLibro(any(Libro.class))).thenReturn(libro);
+
+        mockMvc.perform(post("/api/libros")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"titulo\":\"1984\",\"autor\":\"Orwell\",\"isbn\":\"123456\",\"anioPublicacion\":1949}"))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.titulo").value("1984"));
+    }
+
+    @Test
+    void testUpdateBook() throws Exception {
+
+        Libro libro = new Libro();
+        libro.setId(2L);
+        libro.setTitulo("El mundo increible de Job");
+        libro.setAutor("Marco Aurelio");
+        libro.setIsbn("123456");
+        libro.setAnioPublicacion(2002);
+
+        when(libroService.actualizarLibro(null, any(Libro.class))).thenReturn(libro);
+
+        mockMvc.perform(put("/api/libros/4")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(libro)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.titulo").value("EL mundo increible de Job"));
+    }
+
+    @Test
+    void testDeleteBook() throws Exception {
+        doNothing().when(libroService).eliminarLibro(1L);
+
+        mockMvc.perform(delete("/api/libros/1"))
+                .andExpect(status().isOk());
+    }
 }
